Bug #1172 - CUNY logo in footer looks blurry

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -461,6 +461,9 @@ body.adminbar-manual-bootstrap{
 #openlab-footer{
     padding-top: 30px;
     background: #f0f0f0;
+    .cuny-logo{
+        max-width: 74px;
+    }
     p,
     a{
         font-size: 12px;
